// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 1`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": "utilisateurMotdepasse",
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": true,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 2`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": true,
  "motDePasse": "utilisateurMotdepasse",
  "nom": "utilisateurNom",
  "permissionModification": true,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": true,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": true,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 3`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": true,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 4`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": false,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;

exports[`utilisateursQueryModify Vérifie l'écriture de la requête sur un utilisateur 5`] = `
Object {
  "administration": Object {
    "activitesTypes": Array [],
    "id": "aut-97300-01",
  },
  "administrationId": "aut-97300-01",
  "dateCreation": "2022-05-12",
  "email": "utilisateurEmail",
  "entreprises": Array [],
  "entreprisesCreation": false,
  "id": "utilisateurId",
  "modification": false,
  "motDePasse": "utilisateurMotdepasse",
  "nom": "utilisateurNom",
  "permissionModification": false,
  "preferences": null,
  "prenom": null,
  "qgisToken": null,
  "refreshToken": null,
  "role": "editeur",
  "suppression": false,
  "telephoneFixe": null,
  "telephoneMobile": null,
  "utilisateursCreation": false,
}
`;
